# OSDAT

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  crawler.rs  downloader.rs  extractor.rs  llm.rs  main.rs  models.rs  output.rs
src/tui/: mod.rs  widgets.rs
