[package]
name = "osdat"
version = "0.1.0"
edition = "2024"
description = "Open Data Portal Quality Assessment Tool"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
calamine = "0.26"
csv = "1"
xml-rs = "0.8"
uuid = { version = "1", features = ["v4"] }
indexmap = { version = "2", features = ["serde"] }
ratatui = { version = "0.30", features = ["all-widgets", "crossterm"] }
crossterm = "0.28"
color-eyre = "0.6"

[dev-dependencies]
tempfile = "3"
